Fixed some CSS. Stuck on showing, updating individual route

--- a/src/Components/RouteAdd/RouteAdd.css
+++ b/src/Components/RouteAdd/RouteAdd.css
@@ -51,3 +51,9 @@
   color: white;
   float: right;
 }
+
+.route-add input::-webkit-outer-spin-button,
+.route-add input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
