--- a/src/Components/RouteList/RouteList.css
+++ b/src/Components/RouteList/RouteList.css
@@ -31,6 +31,10 @@
   margin: 5px;
 }
 
+.route:hover {
+  box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
+}
+
 .route button {
   float: right;
   border: none;
@@ -41,6 +45,6 @@
 }
 
 .route button:hover {
-  color: rgb(255, 110, 110);
+  color: rgb(255, 61, 61);
   cursor: pointer;
 }
